--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas 
 numpy     
-KNNImputer from sklearn.impute
-plotly.express 
-detect_outliers from datasist.structdata
+sklearn
+plotly
+datasist.structdata
